import { describe, expect, it } from "vitest";
import { parseConfig } from "../../core/src/index.js";
import { generateArtifacts, generateStrings, generateSwift } from "./index.js";

const config = {
  schema: "0.1",
  app: { id: "dev.intentlane.example", name: "Example", url_scheme: "example", min_ios: "18.0", locales: ["en", "fr"] },
  intents: [{
    id: "create_idea",
    title: { en: "Create an idea", fr: "Créer une idée" },
    description: { en: "Add a new idea", fr: "Ajouter une nouvelle idée" },
    parameters: [{ id: "title", type: "string", required: true }],
    execution: { mode: "open_app", route: "/ideas/new", mapping: { title: "title" } },
    result: { dialog: { en: "Your idea is ready", fr: "Votre idée est prête" } },
    shortcuts: { phrases: { en: ["Create an idea in ${appName}"], fr: ["Créer une idée dans ${appName}"] } }
  }]
};

const multiIntentConfig = {
  ...config,
  intents: [
    config.intents[0],
    {
      id: "open_inbox",
      title: { en: "Open the inbox", fr: "Ouvrir la boîte de réception" },
      parameters: [],
      execution: { mode: "open_app", route: "/inbox" },
      shortcuts: { phrases: { en: ["Open the inbox in ${appName}"] } }
    }
  ]
};

describe("generateSwift", () => {
  it("matches the reference Swift snapshot", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateSwift(result.ir)).toMatchSnapshot();
  });

  it("is byte-for-byte deterministic", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateSwift(result.ir)).toBe(generateSwift(result.ir));
  });

  it("reads every user-visible string from the IntentLane table", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    const swift = generateSwift(result.ir);
    expect(swift).toContain('static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")');
    expect(swift).toContain('static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))');
    expect(swift).toContain('@Parameter(title: LocalizedStringResource("title", table: "IntentLane"))');
    expect(swift).toContain('dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane"))');
    expect(swift).toContain('shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane")');
  });

  it("matches the multi-intent Swift snapshot", () => {
    const result = parseConfig(multiIntentConfig);
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateSwift(result.ir)).toMatchSnapshot();
  });

  it("separates AppShortcuts without commas inside the result builder", () => {
    const result = parseConfig(multiIntentConfig);
    if (!result.ir) throw new Error("Fixture must parse");
    const swift = generateSwift(result.ir);
    expect(swift.match(/^\s*AppShortcut\(/gm)).toHaveLength(2);
    expect(swift).not.toMatch(/\),\n\s*AppShortcut\(/);
    expect(swift).toMatch(/systemImageName: "sparkles"\)\n\s*AppShortcut\(/);
  });

  it("omits intents that declare no shortcut phrases for the default locale", () => {
    const result = parseConfig({
      ...config,
      intents: [
        config.intents[0],
        { id: "open_inbox", title: { en: "Open the inbox" }, parameters: [], execution: { mode: "open_app", route: "/inbox" } }
      ]
    });
    if (!result.ir) throw new Error("Fixture must parse");
    const swift = generateSwift(result.ir);
    expect(swift.match(/^\s*AppShortcut\(/gm)).toHaveLength(1);
    expect(swift).not.toContain("OpenInbox()");
  });

  it("emits no shortcuts provider when no intent declares phrases", () => {
    const result = parseConfig({
      ...config,
      intents: [{ id: "open_inbox", title: { en: "Open the inbox" }, parameters: [], execution: { mode: "open_app", route: "/inbox" } }]
    });
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateSwift(result.ir)).not.toContain("AppShortcutsProvider");
  });
});

describe("generateStrings", () => {
  it("translates the visible strings of the default locale", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateStrings(result.ir, "fr")).toBe(
      [
        "/* Generated by IntentLane. Do not edit. */",
        '"Create an idea" = "Créer une idée";',
        '"Add a new idea" = "Ajouter une nouvelle idée";',
        '"Your idea is ready" = "Votre idée est prête";',
        ""
      ].join("\n")
    );
  });

  it("keeps the banner alone when a locale has nothing to translate", () => {
    const result = parseConfig({
      ...config,
      intents: [{ ...config.intents[0], title: { en: "Create an idea" }, description: undefined, result: undefined }]
    });
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateStrings(result.ir, "fr")).toBe("/* Generated by IntentLane. Do not edit. */\n");
  });

  it("escapes quotes, backslashes and newlines", () => {
    const result = parseConfig({
      ...config,
      intents: [
        {
          ...config.intents[0],
          title: { en: 'Say "hi" to \\ Ada', fr: "Dis \"salut\" à \\ Ada" },
          description: undefined,
          result: undefined
        }
      ]
    });
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateStrings(result.ir, "fr")).toBe(
      ['/* Generated by IntentLane. Do not edit. */', '"Say \\"hi\\" to \\\\ Ada" = "Dis \\"salut\\" à \\\\ Ada";', ""].join("\n")
    );
  });

  it("wins deterministic collisions in canonical intent order", () => {
    const result = parseConfig({
      ...config,
      intents: [
        { ...config.intents[0], title: { en: "Shared", fr: "Partagé" }, description: undefined, result: undefined },
        { ...config.intents[0], id: "second_intent", title: { en: "Shared", fr: "Dupliqué" }, description: undefined, result: undefined }
      ]
    });
    if (!result.ir) throw new Error("Fixture must parse");
    const strings = generateStrings(result.ir, "fr");
    expect(strings).toContain('"Shared" = "Partagé";');
    expect(strings).not.toContain("Dupliqué");
  });
});

describe("generateArtifacts", () => {
  it("emits the Swift source plus one strings table per non-default locale", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    const artifacts = generateArtifacts(result.ir);
    expect(artifacts.map((artifact) => artifact.path)).toEqual(["IntentLaneGenerated.swift", "fr.lproj/IntentLane.strings"]);
    expect(artifacts[0]?.contents).toBe(generateSwift(result.ir));
    expect(artifacts[1]?.contents).toBe(generateStrings(result.ir, "fr"));
  });

  it("emits a single artifact when only the default locale is declared", () => {
    const result = parseConfig({ ...config, app: { ...config.app, locales: ["en"] } });
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateArtifacts(result.ir).map((artifact) => artifact.path)).toEqual(["IntentLaneGenerated.swift"]);
  });

  it("orders locales by code point so the Swift source leads", () => {
    const result = parseConfig({ ...config, app: { ...config.app, locales: ["fr", "en", "de"] } });
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateArtifacts(result.ir).map((artifact) => artifact.path)).toEqual([
      "IntentLaneGenerated.swift",
      "de.lproj/IntentLane.strings",
      "en.lproj/IntentLane.strings"
    ]);
  });

  it("is byte-for-byte deterministic", () => {
    const result = parseConfig(config);
    if (!result.ir) throw new Error("Fixture must parse");
    expect(generateArtifacts(result.ir)).toEqual(generateArtifacts(result.ir));
  });
});
