// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSwift > matches the multi-intent Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(opensIntent: OpenURLIntent(url), dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")))
  }
}

struct OpenInbox: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Open the inbox", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/inbox", query: [:])
    return .result(opensIntent: OpenURLIntent(url), dialog: IntentDialog(LocalizedStringResource("Open the inbox", table: "IntentLane")))
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
      AppShortcut(intent: OpenInbox(), phrases: [
        "Open the inbox in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Open the inbox", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`generateSwift > matches the reference Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    return components.url ?? URL(string: "about:blank")!
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & OpensIntent {
    let url = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(opensIntent: OpenURLIntent(url), dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")))
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;
